workspace-sf/force-app/main/default/objects/SeguradoOrcamento_Event__e/SeguradoOrcamento_Event__e.object-meta.xml
<CustomObject>
    <label>SeguradoOrcamento Event</label>
    <pluralLabel>SeguradoOrcamento Events</pluralLabel>
</CustomObject>