workspace-sf/force-app/main/default/objects/SeguradoOrcamento_Event__e/fields/Afastado__c.field-meta.xml
<CustomField>
    <fullName>Afastado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Afastado</label>
    <type>Checkbox</type>
</CustomField>