workspace-sf/force-app/main/default/objects/SeguradoOrcamento_Event__e/fields/DataNascimento__c.field-meta.xml
<CustomField>
    <fullName>DataNascimento__c</fullName>
    <label>DataNascimento</label>
    <type>Date</type>
</CustomField>