workspace-sf/force-app/main/default/objects/SeguradoOrcamento_Event__e/fields/DescontoAgravoMonetarioComercial__c.field-meta.xml
<CustomField>
    <fullName>DescontoAgravoMonetarioComercial__c</fullName>
    <label>DescontoAgravoMonetarioComercial</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>