workspace-sf/force-app/main/default/objects/SeguradoOrcamento_Event__e/fields/DescontoAgravoPercentualComercial__c.field-meta.xml
<CustomField>
    <fullName>DescontoAgravoPercentualComercial__c</fullName>
    <label>DescontoAgravoPercentualComercial</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>