workspace-sf/force-app/main/default/objects/SeguradoOrcamento_Event__e/fields/GrupoOrcamento__c.field-meta.xml
<CustomField>
    <fullName>GrupoOrcamento__c</fullName>
    <label>GrupoOrcamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>