workspace-sf/force-app/main/default/objects/SeguradoOrcamento_Event__e/fields/PorcentagemParticipacaoSegurado__c.field-meta.xml
<CustomField>
    <fullName>PorcentagemParticipacaoSegurado__c</fullName>
    <label>PorcentagemParticipacaoSegurado</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>