workspace-sf/force-app/main/default/objects/SeguradoOrcamento_Event__e/fields/PremioParcela__c.field-meta.xml
<CustomField>
    <fullName>PremioParcela__c</fullName>
    <label>PremioParcela</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>