workspace-sf/force-app/main/default/objects/SeguradoOrcamento_Event__e/fields/QuantidadeParcelas__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeParcelas__c</fullName>
    <label>QuantidadeParcelas</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>