workspace-sf/force-app/main/default/objects/SeguradoOrcamento_Event__e/fields/TaxaComercial__c.field-meta.xml
<CustomField>
    <fullName>TaxaComercial__c</fullName>
    <label>TaxaComercial</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>