workspace-sf/force-app/main/default/objects/SeguradoOrcamento_Event__e/fields/TipoCusteio__c.field-meta.xml
<CustomField>
    <fullName>TipoCusteio__c</fullName>
    <label>TipoCusteio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>