workspace-sf/force-app/main/default/objects/SeguradoOrcamento_Event__e/fields/TipoDescontoAgravo__c.field-meta.xml
<CustomField>
    <fullName>TipoDescontoAgravo__c</fullName>
    <label>TipoDescontoAgravo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>